<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="coordinates">Coordinates</string>
    <string name="address">Address</string>
    <string name="locating">Locating</string>
    <string name="pinpointing_location">Pinpointing Location</string>
    <string name="finding_location">Finding Location&#8230;</string>
    <string name="unknown">Unknown</string>
    <string name="could_not_get_location">Could not get location</string>
    
    <string name="empty_location_history">Empty Location History</string>
    
   	<string name="locating1">Locating</string>
   	<string name="locating2">Locating.</string>
   	<string name="locating3">Locating..</string>
   	<string name="locating4">Locating&#8230;</string>
   	
   	<string name="loadingtext_pinpointing_location">Pinpointing your location. This might take awhile.</string>
   	<string name="loadingtext_gps_is_off">GPS is off. <b>Tap here</b> for better accuracy.</string>
   	<string name="loadingtext_go_outside">Finding your location works best when you\'re outside.</string>
   	<string name="loadingtext_network_is_off">Network location is off. <b>Tap here</b> to turn on.</string>
   	
   	<string name="errortitle_having_trouble_locating">Having Trouble Locating</string>
   	<string name="errordesc_try_going_outside">Try going outside or wait for the skies to clear up. Then try again.</string>
   	
   	<string name="errortitle_location_services_are_off">Location Services are <i>Off</i></string>
   	<string name="errordesc_tap_here_to_turn_them_on"><b>Tap Here</b> to turn them on.</string>
   	
   	<string name="errortitle_something_went_wrong">Something Went Wrong</string>
   	<string name="errordesc_tap_here_to_try_again"><b>Tap Here</b> to try again.</string>
   	
	<string name="refresh">Refresh</string>
	<string name="share_location">Share Location</string>
	<string name="about_location">About Location</string>
	
   	<string name="share_address_subject">My Location</string>
   	
   	<string name="background_map">Background Map</string>
</resources>
