<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AppWidgetBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppWidgetClassic.Clickable">

	<LinearLayout android:id="@+id/DetailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:paddingLeft="8dip"
        android:paddingRight="8dip">

        <ViewFlipper android:layout_width="match_parent" android:layout_height="wrap_content"
            style="@style/WidgetTextTicker.Fast">
            <TextView
	            style="@style/AWCText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/locating1" />
            <TextView
	            style="@style/AWCText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/locating2" />
            <TextView
	            style="@style/AWCText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/locating3" />
            <TextView
	            style="@style/AWCText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/locating4" />
       	</ViewFlipper>
    </LinearLayout>
</FrameLayout>
